feat: implement data model apis
