# internal/schema/parser/parser.go
@@ -1,16 +1,17 @@
-package schema
+package parser
 
 import (
 	"encoding/json"
 	"errors"
 	"github.com/117s/mdm/internal/global"
+	"github.com/117s/mdm/internal/schema"
 )
 
 // ValidateJSON checks if the input json string is a valid DataModel
-func ValidateJSON(target string) (*DataModel, error) {
+func ValidateJSON(target string) (*schema.DataModel, error) {
 	global.Log.Sugar().Debugf("validate target: %s", target)
 
-	var val DataModel
+	var val schema.DataModel
 	err := json.Unmarshal([]byte(target), &val)
 	if err != nil {
 		global.Log.Sugar().Warnf("failed to marshal json, err: %s", err.Error())
@@ -32,18 +33,18 @@ func ValidateJSON(target string) (*DataModel, error) {
 	return nil, nil
 }
 
-func validateProperties(dm *DataModel) error {
+func validateProperties(dm *schema.DataModel) error {
 	if len(dm.Properties) == 0 {
 		return errors.New("missing required DataModel properties")
 	}
 
-	m := make(map[string]Property, len(dm.Properties))
+	m := make(map[string]schema.Property, len(dm.Properties))
 	for _, property := range dm.Properties {
 		if _, ok := m[property.ID]; ok {
 			return errors.New("duplicated property: " + property.ID)
 		}
 		m[property.ID] = property
-		err := property.validate()
+		err := property.Validate()
 		if err != nil {
 			return err
 		}
