# internal/schema/property.go
@@ -9,6 +9,7 @@ import (
 type Property struct {
 	// ID is used to identify this property, which will be used as the name of this column
 	// should follow pattern ^[a-z_][a-z0-9_]*$
+	// ID should have a max length of 64
 	ID string `json:"id" validate:"required"`
 	// Name is used for business observers
 	Name string `json:"name" validate:"required"`
@@ -16,10 +17,12 @@ type Property struct {
 	// string must have a max length, while text does not require this
 	// string => VARCHAR
 	// text => TEXT
-	Type     string                 `json:"type" validate:"required"`
-	Options  map[string]interface{} `json:"options"`
-	Comments string                 `json:"comments"`
-	Required bool                   `json:"required" validate:"required"`
+	Type        string                  `json:"type" validate:"required"`
+	Options     *map[string]interface{} `json:"options" gorm:"-"`
+	OptionsStr  *string                 `json:"optionsStr"`
+	Comments    string                  `json:"comments"`
+	Required    bool                    `json:"required" validate:"required"`
+	DataModelID string                  `json:"dataModelId" validate:"required"`
 }
 
 type VarCharOptions struct {
@@ -49,7 +52,7 @@ func init() {
 	validPropertyType[DatetimeField] = 1
 }
 
-func (p *Property) validate() error {
+func (p *Property) Validate() error {
 	if _, ok := validPropertyType[p.Type]; !ok {
 		return errors.New("unsupported property type: " + p.Type)
 	}
